--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -72,7 +72,7 @@
 
 * Randomness
 * Hash functions
-* Digital signatures
+* Signatures
 
 </script></section>
 
@@ -365,6 +365,68 @@ $h = H(m)$
 
 </script></section>
 
+
+
+<section data-markdown><script type="text/template">
+
+## Signatures
+
+Digital signatures let you create messages such as
+
+<i>"I, Alice, send 10 BTC to Bob"</i>
+
+... and prove that this message was created by Alice, and not some attacker
+
+</script></section>
+
+
+
+<section data-markdown><script type="text/template">
+
+## Public and private keys
+ 
+* Use a true RNG to create a private key
+  * Keep your private key secret!
+* Each private key has a corresponding public key
+  * Your public key is your bitcoin/ethereum address
+
+</script></section>
+
+
+
+
+
+
+<section data-markdown><script type="text/template">
+
+## Signatures made simple
+
+Let's say all you have is a preimage-attack resistant hash function.
+
+Suppose you want to sign a 1 bit message:
+
+  * Private key: 2 random secrets $r_0$ and $r_1$
+  * Public key: $H(r_0), H(r_1)$
+  * To sign the message `0`, reveal $r_0$
+  * To sign the message `1`, reveal $r_1$
+
+Unfortunately this only works for a single message
+
+</script></section>
+
+
+<section data-markdown><script type="text/template">
+
+## Types of signatures
+
+  * RSA
+  * Elliptic curves
+  * Hash-based
+  * Lattices
+
+On blockchains, almost always **elliptic curves**
+
+</script></section>
 
 
 
