--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -66,6 +66,23 @@
 
 
 
+<section data-markdown><script type="text/template">
+
+## Types of accounts
+
+* Externally Owned Accounts (EOA)
+  * Has public/private key-pair
+  * Does not have code
+* Contracts
+  * Does not have a key-pair
+  * Has code
+
+Both 
+
+</script></section>
+
+
+
 
 <!------------------------------------------------------->
 
