--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
-<h1>Blockchain Security Course</h1>
+<style>
+body {
+  font-size: 18px;
+  font-family: arial, sans;
+}
 
-<div>
-  <h2>Lesson 1: Cryptographic Primitives</h2>
+.lesson {
+  margin-top: 50px;
+  margin-left: 30px;
+}
+</style>
+
+
+<h1>Introduction to Blockchain Security Practices</h1>
+
+<h2>Doug Hoyte</h2>
+
+
+<div class="lesson">
+  <h3>Lesson 1: Cryptographic Primitives</h3>
 
   <a href="lesson1/index.html">Slides</a>
 
@@ -10,4 +26,35 @@
     <li><a href="lesson1/randviz.html">randviz.html</a></li>
     <li><a href="lesson1/preimage.html">preimage.html</a></li>
   </ul>
+</div>
+
+
+<div class="lesson">
+  <h3>Lesson 2: Blockchain Architecture</h3>
+
+  <a href="lesson2/index.html">Slides</a>
+
+  <ul>
+    <li><a href="lesson2/example-transactions.html">example-transactions.html</a></li>
+  </ul>
+</div>
+
+
+<div class="lesson">
+  <h3>Lesson 3: Solidity Programming</h3>
+</div>
+
+
+<div class="lesson">
+  <h3>Lesson 4: Smart Contract Security</h3>
+</div>
+
+
+<div class="lesson">
+  <h3>Lesson 5: Full Stack Security</h3>
+</div>
+
+
+<div class="lesson">
+  <h3>Lesson 6: Final Exam</h3>
 </div>
