--- a/lesson1/preimage.html
+++ b/lesson1/preimage.html
@@ -5,7 +5,7 @@ div { margin-top: 20px; }
 
 <script src="./sha1.js"></script>
 
-I chose a secret number and this is its hash:
+I chose a secret number and this is its SHA1 hash:
 
 <pre>
 f0501dc19c8aa8925e88f6044d49555b575b65b5
