--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ body {
 
   <ul>
     <li><a href="lesson2/example-transactions.html">example-transactions.html</a></li>
+    <li><a href="lesson2/query-jsonrpc.html">query-jsonrpc.html</a></li>
   </ul>
 </div>
 
