--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -47,7 +47,15 @@
 
       .reveal .big-and-bold {
         font-weight: bold;
-        font-size: 125%;
+        font-size: 135%;
+      }
+
+      .reveal .shrunk-a-bit {
+        font-size: 90%;
+      }
+
+      .reveal .shrunk-a-bit pre {
+        width: 100%;
       }
     </style>
   </head>
@@ -72,6 +80,18 @@
 
 
 
+<section data-markdown><script type="text/template">
+
+## Lesson Topics
+
+* Transactions
+* Nodes and RPC
+* Interfaces
+
+</script></section>
+
+
+
 
 <section data-markdown><script type="text/template">
 
@@ -79,9 +99,9 @@
 
 * A blockchain is a distributed data-base (DB)
 * Everyone agrees on a basic set of rules about how it can be changed
-  * Example: only the owner of an account can send transactions from it
-* When it is working properly, everyone in the world has an exact copy of the DB
-  * *consensus*
+  * Example: only the owner of an account can send transactions from the account
+* When a blockchain is working properly, everyone in the world has the exact same copy of the DB
+  * How this happens is called a *consensus protocol*
 
 </script></section>
 
@@ -95,6 +115,7 @@
 * When applying a transaction to the DB, everyone in the world must get the same resulting DB
 * So: all transactions must be **deterministic**
   * Cannot get input from outside world
+  * Cannot have side-effects on the outside world
   * Cannot generate random numbers
 
 </script></section>
@@ -145,7 +166,7 @@
 
 * In UTXO model, a transaction "spends" a UTXO, invalidating it so it cannot be spent again
 * In Account model, each account has a counter and each transaction has a transaction number
-  * To mine a transaction, its transaction number must be next the account counter number
+  * To mine a transaction, its transaction number must be the next account counter number
   * After applying the transaction, the account counter is incremented
 
 </script></section>
@@ -161,8 +182,8 @@
 * Externally Owned Accounts (EOA)
   * Normal public/private key-pair accounts like we created last lesson
 * Contracts
-  * Does not have a key-pair
-  * Has "code" written by the contract creator
+  * Do not have key-pairs
+  * Have "code" written by contract creators
   * No ability to send transactions: can only respond to external events
 
 </script></section>
@@ -176,7 +197,7 @@
 ## Ethereum Transaction Structure
 
 | Field        | Explanation  |
-| ------------- | -----:|
+| ------------- |:-----:|
 | nonce      | Transaction number |
 | to | Address being sent to |
 | value | Amount of ETH sent to `to` |
@@ -193,7 +214,7 @@
 
 ## Nonce
 
-* A nonce is a <span class="big-and-bold">N</span>umber you can only use <span class="big-and-bold">ONCE</span>
+* <span class="big-and-bold">N</span>umber you can only use <span class="big-and-bold">ONCE</span>
 * Ethereum sometimes calls the account counter and/or the transaction number a *nonce*
 * Sort of a misnomer in Ethereum:
   * Not harmful to re-use a nonce, because only one transaction will make it onto the chain
@@ -284,6 +305,174 @@
 ## 15 minute break
 
 </script></section>
+
+
+
+
+<section data-markdown><script type="text/template">
+
+## Blockchain nodes
+
+* Blockchains are *peer-to-peer* protocols
+* The initial concept is that every user in the system runs the same software
+  * No client/server distinction
+* However, running "full nodes" is expensive so there are alternatives:
+  * Light clients like electrum, SPV
+  * Services like INFURA
+
+</script></section>
+
+
+
+
+<section data-markdown><script type="text/template">
+
+## What do full nodes do
+
+* Full nodes communicate over a gossip protocol
+* Exchange new transactions, and new blocks as they are mined
+* Verify that every transaction in every block follows the rules
+* Some full nodes also manage private keys and create transactions on behalf of users
+  * This is now regarded as bad design
+  * Prefer separation of key management from node software
+
+</script></section>
+
+
+
+
+<section data-markdown><script type="text/template">
+
+## ganache-cli
+
+A simple solution for testing and experimenting is `ganache-cli`. Install it:
+
+    $ npm install ganache-cli
+
+Then run:
+
+    $ ./node_modules/.bin/ganache-cli -d
+
+(The `-d` makes it so the accounts are the same every time)
+
+</script></section>
+
+
+
+<section data-markdown class="shrunk-a-bit"><script type="text/template">
+
+## Starting ganache-cli
+
+    $ ./node_modules/.bin/ganache-cli -d
+    Ganache CLI v6.4.1 (ganache-core: 2.5.3)
+
+    Available Accounts
+    ==================
+    (0) 0x90f8bf6a479f320ead074411a4b0e7944ea8c9c1 (~100 ETH)
+    (1) 0xffcf8fdee72ac11b5c542428b35eef5769c409f0 (~100 ETH)
+    ...
+
+    Private Keys
+    ==================
+    (0) 0x4f3edf983ac636a65a842ce7c78d9aa706d3b113bce9c46f30d7d21715b23b1d
+    (1) 0x6cbed15c793ce57650b9877cf6fa156fbef513c4e6134f022a85b1ffdd59b2a1
+    ...
+
+    Listening on 127.0.0.1:8545
+
+</script></section>
+
+
+
+<section data-markdown><script type="text/template">
+
+## JSON-RPC
+
+* In order to expose functionality, most node software offers *Remote Procedural Call* interfaces
+* Most common is JSON-RPC, which is just JSON messages sent over HTTP
+  * Default Ethereum JSON-RPC port is 8545
+* [Documentation](https://github.com/ethresearch/en-ethereum-wiki/blob/master/json-rpc.md)
+
+</script></section>
+
+
+
+
+<section data-markdown><script type="text/template">
+
+## Data formats
+
+* In JSON-RPC, many inputs and outputs are hex-encoded (string with a "0x" prefix)
+* Numeric values are in [two's complement](https://en.wikipedia.org/wiki/Two%27s_complement)
+* ETH values are always in Wei (there are 10<sup>18</sup> wei in 1 ETH)
+
+</script></section>
+
+
+
+<section data-markdown><script type="text/template">
+
+## Exercise: Query node directly
+
+[query-jsonrpc.html](query-jsonrpc.html)
+
+</script></section>
+
+
+
+<section data-markdown><script type="text/template">
+
+## 15 minute break
+
+</script></section>
+
+
+
+
+
+<section data-markdown><script type="text/template">
+
+## Interfaces
+
+* JSON-RPC is a *low-level* interface to a node
+* Most programmers interact with a higher-layer library
+  * [web3.js](https://web3js.readthedocs.io/en/1.0/) (JS)
+  * [ethers.js](https://docs.ethers.io/ethers.js/html/) (JS)
+  * [Web3.py](https://web3py.readthedocs.io/en/stable/) (Python)
+
+</script></section>
+
+
+
+
+<section data-markdown><script type="text/template">
+
+## User interfaces
+
+* End-users interact with **wallet software**:
+  * Manage keys (hopefully securely)
+  * Build and sign transactions on behalf of the user
+  * Communicate with nodes to upload transactions and read state of the chain
+  * Provide an API for *dapps* to interact with the wallet
+    * dapps should not have access to user's private keys!
+* Most popular interface is Metamask
+
+</script></section>
+
+
+
+<section data-markdown><script type="text/template">
+
+## Metamask
+
+* Metamask is a browser extension
+* Manages your private keys
+* Creates transactions
+* Download it from [https://metamask.io](https://metamask.io) 
+  * Backup your seed words safely
+
+</script></section>
+
 
 
 
