--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@ body {
   <a href="lesson1/index.html">Slides</a>
 
   <ul>
-    <li><a href="lesson1/dice.html">dice.html</a></li>
-    <li><a href="lesson1/randviz.html">randviz.html</a></li>
-    <li><a href="lesson1/preimage.html">preimage.html</a></li>
+    <li>Demo: <a href="lesson1/dice.html">dice.html</a></li>
+    <li>Demo: <a href="lesson1/randviz.html">randviz.html</a></li>
+    <li>Lab 1: <a href="lesson1/preimage.html">preimage.html</a></li>
+    <li>Lab 2: <a href="lesson1/vanity-address.html">vanity-address.html</a></li>
   </ul>
 </div>
 
@@ -35,8 +36,9 @@ body {
   <a href="lesson2/index.html">Slides</a>
 
   <ul>
-    <li><a href="lesson2/example-transactions.html">example-transactions.html</a></li>
-    <li><a href="lesson2/query-jsonrpc.html">query-jsonrpc.html</a></li>
+    <li>Demo: <a href="lesson2/example-transactions.html">example-transactions.html</a></li>
+    <li>Lab 3: <a href="lesson2/query-jsonrpc.html">query-jsonrpc.html</a></li>
+    <li>Lab 4: <a href="lesson2/creating-transactions.html">creating-transactions.html</a></li>
   </ul>
 </div>
 
