--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -266,7 +266,7 @@ $h = H(m)$
 
 * Be careful when anonymizing names/IPs/emails/etc by hashing
 * If there aren't that many possible secrets, you can just try all of them
-* Exercise: [preimage.html](preimage.html)
+* Lab 1: [preimage.html](preimage.html)
 * So much for "one-way" function
  
 </script></section>
@@ -525,15 +525,9 @@ On blockchains, almost always **elliptic curves**
 
 <section data-markdown><script type="text/template">
 
-## Assignment: Vanity Address
+## Lab 2: Vanity Address
 
-* Find a private key with a corresponding Ethereum address that starts with `0x1234`
-* Make sure you generate your private key safely!
-* HINT: Use [ethereumjs-util](https://www.npmjs.com/package/ethereumjs-util) JavaScript package
-* For extra credit:
-  * Don't use `privateToAddress` method
-  * Make sure your random number is actually a valid private key
-  * What is the probability one of your classmates gets the same address as you?
+[vanity-address.html](vanity-address.html)
 
 </script></section>
 
