--- a/lesson1/preimage.html
+++ b/lesson1/preimage.html
@@ -3,6 +3,8 @@ body { font-size: 20px; }
 div { margin-top: 20px; }
 </style>
 
+<h1>Lab 1: Reversing a hash</h1>
+
 <script src="./sha1.js"></script>
 
 I chose a secret number and this is its SHA1 hash:
