--- a/lesson2/query-jsonrpc.html
+++ b/lesson2/query-jsonrpc.html
@@ -1,31 +1,29 @@
 <style>
-body {
-  font-size: 125%;
-}
+body { font-size: 20px; }
+div { margin-top: 20px; }
 
-div {
-  margin-bottom: 20px;
+ul > li {
+  margin-top: 10px;
 }
 </style>
 
-<div>
-  When you started ganache-cli, it printed out a list of addresses that were given a default balance.
-</div>
+<h1>Lab 3: Query JSON RPC Node</h1>
 
 <div>
-  Query ganache-cli's JSON-RPC port to find the balance of one of these addresses.
+  Write a script in a language of your choice to find the balance in ETH of an account by querying a running ganachi-cli instance's JSON-RPC port (8545). Include the script in your submission.
 </div>
 
-<div>
-  An easy way is to use the <a href="https://curl.haxx.se/">curl</a> command:
-</div>
-
+<ul>
+  <li>You need to do an HTTP POST request to http://localhost:8545</li> 
+  <li>You will use the <a href="https://github.com/ethresearch/en-ethereum-wiki/blob/master/json-rpc.md#eth_getbalance">eth_getBalance</a> RPC method</li>
+  <li>The body of the POST should be JSON, and should look like:
 <div>
 <pre>
-$ curl http://localhost:8545 -d '{"method":"eth_getBalance","params":["ADDRESS_GOES_HERE"]}'
+{"method":"eth_getBalance","params":["ADDRESS_GOES_HERE"]}
 </pre>
 </div>
-
-<div>
-The output is in wei (there are 1e18 wei in 1 ETH), and is encoded in hexadecimal. Convert this to ETH and decimal.
-</div>
+  </li>
+  <li>The output is in wei (there are 1e18 wei in 1 ETH), and is encoded in hexadecimal. Convert this to ETH and decimal.</li>
+  <li>When you started ganachi-cli it printed out some addresses that were given ETH. Try to query those.</li>
+  <li>What about other addresses? Does it throw an error for unknown addresses?</li>
+</ul>
